--- a/sass/main.css
+++ b/sass/main.css
@@ -583,10 +583,12 @@ footer .two-columns-wrapper {
 }
 footer .footer-info {
   margin: 48px 0 0;
+  text-align: center;
 }
 @media screen and (min-width: 768px) {
   footer .footer-info {
     margin: 64px 0 0;
+    text-align: unset;
   }
 }
 footer .footer-info p {
@@ -600,6 +602,7 @@ footer .footer-info p {
 }
 footer .contact-info {
   margin: 48px 0 0;
+  text-align: center;
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -607,6 +610,7 @@ footer .contact-info {
 @media screen and (min-width: 768px) {
   footer .contact-info {
     margin: 64px 0 0;
+    text-align: unset;
   }
 }
 footer .contact-info i {
