--- a/sass/components/_header_footer.scss
+++ b/sass/components/_header_footer.scss
@@ -247,8 +247,8 @@ footer {
     }
 
     .contact-info {
-        margin: 48px 0 0;
         text-align: center;
+        margin: 48px auto 0;
 
         @media screen and (min-width: $tablet) {
             margin: 64px 0 0;
