--- a/sass/main.css
+++ b/sass/main.css
@@ -601,8 +601,8 @@ footer .footer-info p {
   }
 }
 footer .contact-info {
-  margin: 48px 0 0;
   text-align: center;
+  margin: 48px auto 0;
   display: flex;
   flex-direction: column;
   gap: 12px;
