--- a/sass/slick.css
+++ b/sass/slick.css
@@ -117,3 +117,36 @@
 .slick-arrow.slick-hidden {
     display: none;
 }
+
+/* Основной слайдер */
+.slider-for .slick-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    overflow: hidden;
+}
+
+.slider-for img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+/* Навигационный слайдер */
+.slider-nav .slick-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 5px;
+}
+
+.slider-nav img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 8px;
+    transition: transform 0.3s ease;
+}
